--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button id="new-quote">New Quote</button>
       </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" class="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
